k8s/03-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: intellica
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: vivekchaudhari17/intellica_backend:latest
        command: ["npm", "start"]
        ports:
        - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: intellica
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: LoadBalancer
